--- a/a04ex01.html
+++ b/a04ex01.html
@@ -2,10 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Camelos</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Transistor Biológico</title>
 </head>
 <body>
-    <h1>Camelos caminham até seu destino</h1>
-    <p>Na Líbia, 3.000 camelos que haviam sido importados da Austrália foram retirados de Tripoli, a capital do país, pois o dono teve receio que eles ficassem no fogo cruzado e, ao invés de esperar caminhões, decidiu que o rebanho iria sozinho até seu destino.</p>
+    <img src="https://www.inovacaotecnologica.com.br/noticias/imagens/010110130402-transistor-biologico-1.jpg" alt="">
+
+    Computador biológico
+
+    Na eletrônica, um transístor controla o fluxo de elétrons ao longo de um circuito.
+
+    Do mesmo modo, em biologia, um transcriptor - ou transcritor - controla o fluxo de uma proteína específica, a RNA polimerase, à medida que ela viaja ao longo de uma cadeia de DNA.
+
+    "Reprogramamos um grupo de proteínas naturais, chamadas integrases, para realizar o controle digital do fluxo da RNA polimerase ao longo do DNA, o que por sua vez permitiu que controlássemos a lógica genética," disse Endy.
+
+    Usando os transcriptores, o grupo criou o que é conhecido como portas lógicas, que podem dar respostas do tipo verdadeiro ou falso (1 ou 0) para qualquer questão que possa ser colocada na forma de uma combinação bioquímica.
+
+    Eles batizaram suas portas lógicas de "BIL gates" (Boolean Integrase Logic), ou seja, portas baseadas em lógica booleana da integrase.
+
+    O experimento ainda não produziu um computador biológico legítimo, mas é o passo imediatamente anterior a isso - agora é só montar as portas de forma a criar um circuito que realize os cálculos e armazene as informações.
 </body>
 </html>
